--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Tutorial de Cómo Hacer Pan</title>
 
-    <link rel="stylesheet" href="LandingPage/css/styles.css" type="Text/css">
+    <link rel="stylesheet" href="css/styles.css" type="Text/css">
     
 </head>
 
@@ -29,7 +29,7 @@
             <span><br></span>
             <article>
                 <figure>
-                    <img src="LandingPage/image/bread-101636_1280.jpg" alt="Imagen de pan recién horneado">
+                    <img src="image/bread-101636_1280.jpg" alt="Imagen de pan recién horneado">
                 </figure>
                 <p>
                     El pan es un alimento básico en muchas culturas y su elaboración es un arte que combina ingredientes
@@ -61,10 +61,10 @@
                     <li>250 ml de leche tibia</li>
                     <li>250 g de mantequilla fría</li>
                 </ul>
-                <img src="LandingPage/image/ingredientes.png" alt="Ingredientes para hacer pan">
+                <img src="image/ingredientes.png" alt="Ingredientes para hacer pan">
             </article>
             <article>
-                <img src="LandingPage/image/croissant-2413244_640.jpg" alt="Ingredientes para hacer pan">
+                <img src="image/croissant-2413244_640.jpg" alt="Ingredientes para hacer pan">
                 <p>
                     El croissant, también conocido como "pan Cuernito" en algunos países de habla hispana,
                     es un pastel francés muy popular que se caracteriza por su forma de media luna y su textura
@@ -96,7 +96,7 @@
                         tamaño.
 
                     </p>
-                    <img src="LandingPage/image/harina.jpg" alt="Pasos para hacer pan">
+                    <img src="image/harina.jpg" alt="Pasos para hacer pan">
 
                     <li><b>Preparar la Mantequilla:</b></li>
 
@@ -109,7 +109,7 @@
                         la manipulacion , por ello al enfriar se puede utlizar mas facilmente .
         
                     </p>
-                    <img src="LandingPage/image/laminaMantequilla.jpg" alt="Pasos para hacer pan">
+                    <img src="image/laminaMantequilla.jpg" alt="Pasos para hacer pan">
                     <li><b>Laminar la Masa:</b></li>
                     <p>
 
@@ -123,7 +123,7 @@
                         Repite este proceso dejando reposar la masa en el
                         refrigerador durante 30 minutos entre cada doblado.
                     </p>
-                    <img src="LandingPage/image/laminarmasa.jpg" alt="Pasos para hacer pan">
+                    <img src="image/laminarmasa.jpg" alt="Pasos para hacer pan">
 
                     <li><b> Formar los Croissants:</b></li>
                     <p>
@@ -135,7 +135,7 @@
                         Coloca los croissants en una bandeja para hornear forrada con papel de horno, con la punta hacia
                         abajo.
                     </p>
-                    <img src="LandingPage/image/croissantsforma.jpg" alt="Pasos para hacer pan">
+                    <img src="image/croissantsforma.jpg" alt="Pasos para hacer pan">
 
                     <li><b> Segundo Levado y Hornear:</b></li>
                     <p>
@@ -146,7 +146,7 @@
                         Hornea los croissants durante 15-20 minutos, o hasta que estén dorados y crujientes.
 
                     </p>
-                    <img src="LandingPage/image/horno.jpeg" alt="Pasos para hacer pan">
+                    <img src="image/horno.jpeg" alt="Pasos para hacer pan">
                     <li><b> Enfriar y Servir:</b></li>
                     <p>
                         Saca los croissants del horno y déjalos enfriar en una rejilla antes de servir. <br>
@@ -154,7 +154,7 @@
                          incluso se puede espolvorear azúcar glas por encima de estos , lo cual aumentara la dulzura ,
                          también se puede dejar sin dulce ya que la masa hojaldrada permite que se le de varios sabores  a gusto 
                     </p>
-                    <img src="LandingPage/image/crohecho.jpeg" alt="Pasos para hacer pan">
+                    <img src="image/crohecho.jpeg" alt="Pasos para hacer pan">
                 </ul>
             </article>
         </section>
@@ -166,7 +166,7 @@
         <p>Proyecto realizado con fines educativos, todas las imágenes utilizadas son de uso libre, sin restricciones de licencia </p>
     </footer>
 
-    <script src="LandingPage/js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
